# dsw-seed-maker

./: .gitignore  .pylintrc.ini  Dockerfile  README.md  example.env  pyproject.toml  requirements.txt  tmp.js
.github/workflows/: build.yml  code-style.yml
dsw/: application.yml  create-bucket.sh  docker-compose.yml  seed_maker.env
enc/: pyvenv.cfg
scripts/: build-info.sh  run-dev.sh
src/dsw_seed_maker/: __init__.py  api.py  cli.py  config.py  consts.py  logic.py  models.py  recipe_tmp.json
src/dsw_seed_maker/comm/: __init__.py  db.py  s3.py
src/dsw_seed_maker/static/css/: style.css
src/dsw_seed_maker/static/js/: script.js
src/dsw_seed_maker/templates/: index.html.j2  layout.html.j2
